--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,6 +24,11 @@
 
     <color name="colorPink">#E91E63</color>
 
+    <color name="candidate_normal">#FF000000</color>
+    <color name="candidate_recommended">#FFE35900</color>
+    <color name="candidate_other">#ff808080</color>
+    <color name="candidate_background">#bbffffff</color>
+
     <color name="blue_light">#33B5E5</color>
     <color name="blue_dark">#0099CC</color>
     <color name="purple_light">#AA66CC</color>
