--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -25,4 +25,8 @@
     <dimen name="item_sms_margin_top">4dp</dimen>
 
     <dimen name="edit_text_margin">20dp</dimen>
+
+    <dimen name="key_height">50dip</dimen>
+    <dimen name="candidate_font_height">16sp</dimen>
+    <dimen name="candidate_vertical_padding">6sp</dimen>
 </resources>
