--- a/app/src/main/res/layout/activity_client.xml
+++ b/app/src/main/res/layout/activity_client.xml
@@ -49,6 +49,11 @@
             android:editable="false"
             android:textColor="@color/colorAccent"
             />
+        <Button
+            android:id="@+id/button_register"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="REGISTER"/>
     </LinearLayout>
 
     <Chronometer
