--- a/app/src/main/res/layout/activity_voice.xml
+++ b/app/src/main/res/layout/activity_voice.xml
@@ -57,5 +57,11 @@
             android:layout_marginRight="@dimen/activity_horizontal_margin"
             android:visibility="invisible" />
     </LinearLayout>
+
+    <Button
+        android:id="@+id/button_next"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="NEXT"/>
 </android.support.design.widget.CoordinatorLayout>
 
