--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -43,4 +43,9 @@
     <dimen name="smartdial_suggestions_padding">4dp</dimen>
     <dimen name="smartdial_suggestions_extra_padding">2dp</dimen>
     <dimen name="smartdial_confidence_hint_text_size">27dp</dimen>
+
+    <!-- Numbers -->
+    <dimen name="backdrop_numbers_height">256dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="text_numbers_margin_left">48dp</dimen>
 </resources>
