--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -183,7 +183,7 @@
     </style>
 
     <style name="TextNumber" parent="ViewMatch">
-        <item name="android:paddingLeft">@dimen/text_numbers_margin_left</item>
+        <item name="android:paddingLeft">@dimen/activity_main_margin</item>
         <item name="android:paddingRight">@dimen/activity_main_margin</item>
         <item name="android:textStyle">normal</item>
         <item name="android:gravity">center_vertical</item>
@@ -194,6 +194,18 @@
         <item name="android:layout_height">72dp</item>
         <item name="android:background">?android:attr/selectableItemBackground</item>
         <item name="android:clickable">true</item>
+    </style>
+
+    <style name="TextToolbar" parent="ViewCommon">
+        <item name="android:background">?android:attr/selectableItemBackground</item>
+        <item name="android:clickable">true</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/colorText</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_width">0dp</item>
     </style>
 
 
