--- a/app/src/main/res/layout/fragment_numbers.xml
+++ b/app/src/main/res/layout/fragment_numbers.xml
@@ -19,8 +19,8 @@
     android:id="@+id/main_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    android:background="@android:color/white">
+    android:background="@color/colorGray"
+    android:fitsSystemWindows="true">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
@@ -35,8 +35,6 @@
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
             app:contentScrim="?attr/colorPrimary"
-            app:expandedTitleMarginEnd="64dp"
-            app:expandedTitleMarginStart="48dp"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <RelativeLayout
@@ -61,10 +59,10 @@
 
                 <com.ethan.morephone.widget.MyTextView
                     style="@style/TextDisplay"
-                    android:text="@string/app_name"
                     android:layout_alignParentBottom="true"
+                    android:layout_marginBottom="@dimen/text_message_margin_top"
                     android:layout_marginLeft="@dimen/text_numbers_margin_left"
-                    android:layout_marginBottom="@dimen/text_message_margin_top"/>
+                    android:text="@string/app_name" />
 
             </RelativeLayout>
 
@@ -73,24 +71,53 @@
 
     </android.support.design.widget.AppBarLayout>
 
+    <LinearLayout
+        android:id="@+id/linear_function"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@android:color/white"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <com.ethan.morephone.widget.MyTextView
+            android:id="@+id/text_log_out"
+            style="@style/TextToolbar"
+            android:text="Log out" />
+
+        <View
+            android:id="@+id/view"
+            android:layout_width="0.5dp"
+            android:layout_height="24dp"
+            android:layout_marginRight="@dimen/activity_vertical_margin"
+            android:layout_toLeftOf="@+id/image_message"
+            android:background="@color/colorGray" />
+
+        <com.ethan.morephone.widget.MyTextView
+            android:id="@+id/text_edit"
+            style="@style/TextToolbar"
+            android:text="Edit" />
+
+        <View
+            android:id="@+id/view2"
+            android:layout_width="0.5dp"
+            android:layout_height="24dp"
+            android:layout_marginRight="@dimen/activity_vertical_margin"
+            android:layout_toLeftOf="@+id/image_message"
+            android:background="@color/colorGray" />
+
+        <com.ethan.morephone.widget.MyTextView
+            android:id="@+id/text_buy"
+            style="@style/TextToolbar"
+            android:text="Buy a phone" />
+    </LinearLayout>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="@dimen/text_message_margin_top"
-        android:background="@android:color/white"
+        android:layout_marginTop="?attr/actionBarSize"
+        android:paddingTop="@dimen/activity_vertical_margin"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
-
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/button_share"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/fab_margin"
-        android:clickable="true"
-        android:src="@drawable/icon_buy"
-        app:backgroundTint="@color/colorAccent"
-        app:layout_anchor="@id/appbar"
-        app:layout_anchorGravity="bottom|right|end" />
 
 </android.support.design.widget.CoordinatorLayout>
