--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -48,4 +48,5 @@
     <dimen name="backdrop_numbers_height">256dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="text_numbers_margin_left">48dp</dimen>
+    <dimen name="item_number_space">8dp</dimen>
 </resources>
