--- a/app/src/main/res/layout/fragment_numbers.xml
+++ b/app/src/main/res/layout/fragment_numbers.xml
@@ -51,18 +51,31 @@
                     app:layout_collapseMode="parallax" />
 
                 <android.support.v7.widget.Toolbar
-                    android:id="@+id/toolbar"
+                    android:id="@+id/tool_bar"
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
                     app:layout_collapseMode="pin"
                     app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
                 <com.ethan.morephone.widget.MyTextView
+                    android:id="@+id/text_full_name"
                     style="@style/TextDisplay"
                     android:layout_alignParentBottom="true"
-                    android:layout_marginBottom="@dimen/text_message_margin_top"
-                    android:layout_marginLeft="@dimen/text_numbers_margin_left"
-                    android:text="@string/app_name" />
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginBottom="@dimen/text_numbers_margin_left"
+                    android:text="Ethan Nguyen" />
+
+                <com.ethan.morephone.widget.CircleImageView
+                    android:id="@+id/image_avatar"
+                    android:layout_width="@dimen/image_avatar_default_width_height"
+                    android:layout_height="@dimen/image_avatar_default_width_height"
+                    android:layout_above="@+id/text_full_name"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginBottom="@dimen/activity_vertical_margin"
+                    app:civ_border_width="2dp"
+                    app:civ_border_color="@android:color/white"
+                    android:src="@drawable/girl" />
+
 
             </RelativeLayout>
 
@@ -76,9 +89,9 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@android:color/white"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:gravity="center"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <com.ethan.morephone.widget.MyTextView
             android:id="@+id/text_log_out"
@@ -87,29 +100,22 @@
 
         <View
             android:id="@+id/view"
-            android:layout_width="0.5dp"
-            android:layout_height="24dp"
-            android:layout_marginRight="@dimen/activity_vertical_margin"
-            android:layout_toLeftOf="@+id/image_message"
-            android:background="@color/colorGray" />
+            style="@style/ViewDivider" />
+
+        <com.ethan.morephone.widget.MyTextView
+            android:id="@+id/text_buy"
+            style="@style/TextToolbar"
+            android:text="Buy a phone" />
+
+        <View
+            android:id="@+id/view2"
+            style="@style/ViewDivider" />
 
         <com.ethan.morephone.widget.MyTextView
             android:id="@+id/text_edit"
             style="@style/TextToolbar"
             android:text="Edit" />
 
-        <View
-            android:id="@+id/view2"
-            android:layout_width="0.5dp"
-            android:layout_height="24dp"
-            android:layout_marginRight="@dimen/activity_vertical_margin"
-            android:layout_toLeftOf="@+id/image_message"
-            android:background="@color/colorGray" />
-
-        <com.ethan.morephone.widget.MyTextView
-            android:id="@+id/text_buy"
-            style="@style/TextToolbar"
-            android:text="Buy a phone" />
     </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
