--- a/app/src/main/res/layout/dialpad.xml
+++ b/app/src/main/res/layout/dialpad.xml
@@ -31,19 +31,19 @@
         android:layout_height="0px"
         android:layout_weight="1">
 
-        <com.ethan.morephone.presentation.dial.view.DialpadImageButton
+        <com.ethan.morephone.presentation.phone.dial.view.DialpadImageButton
             android:id="@+id/one"
             style="@style/DialtactsDialpadButtonStyle"
             android:contentDescription="@string/description_image_button_one"
             android:src="@drawable/dial_num_1_wht" />
 
-        <com.ethan.morephone.presentation.dial.view.DialpadImageButton
+        <com.ethan.morephone.presentation.phone.dial.view.DialpadImageButton
             android:id="@+id/two"
             style="@style/DialtactsDialpadButtonStyle"
             android:contentDescription="@string/description_image_button_two"
             android:src="@drawable/dial_num_2_wht" />
 
-        <com.ethan.morephone.presentation.dial.view.DialpadImageButton
+        <com.ethan.morephone.presentation.phone.dial.view.DialpadImageButton
             android:id="@+id/three"
             style="@style/DialtactsDialpadButtonStyle"
             android:contentDescription="@string/description_image_button_three"
@@ -54,19 +54,19 @@
         android:layout_height="0px"
         android:layout_weight="1">
 
-        <com.ethan.morephone.presentation.dial.view.DialpadImageButton
+        <com.ethan.morephone.presentation.phone.dial.view.DialpadImageButton
             android:id="@+id/four"
             style="@style/DialtactsDialpadButtonStyle"
             android:contentDescription="@string/description_image_button_four"
             android:src="@drawable/dial_num_4_wht" />
 
-        <com.ethan.morephone.presentation.dial.view.DialpadImageButton
+        <com.ethan.morephone.presentation.phone.dial.view.DialpadImageButton
             android:id="@+id/five"
             style="@style/DialtactsDialpadButtonStyle"
             android:contentDescription="@string/description_image_button_five"
             android:src="@drawable/dial_num_5_wht" />
 
-        <com.ethan.morephone.presentation.dial.view.DialpadImageButton
+        <com.ethan.morephone.presentation.phone.dial.view.DialpadImageButton
             android:id="@+id/six"
             style="@style/DialtactsDialpadButtonStyle"
             android:contentDescription="@string/description_image_button_six"
@@ -77,19 +77,19 @@
         android:layout_height="0px"
         android:layout_weight="1">
 
-        <com.ethan.morephone.presentation.dial.view.DialpadImageButton
+        <com.ethan.morephone.presentation.phone.dial.view.DialpadImageButton
             android:id="@+id/seven"
             style="@style/DialtactsDialpadButtonStyle"
             android:contentDescription="@string/description_image_button_seven"
             android:src="@drawable/dial_num_7_wht" />
 
-        <com.ethan.morephone.presentation.dial.view.DialpadImageButton
+        <com.ethan.morephone.presentation.phone.dial.view.DialpadImageButton
             android:id="@+id/eight"
             style="@style/DialtactsDialpadButtonStyle"
             android:contentDescription="@string/description_image_button_eight"
             android:src="@drawable/dial_num_8_wht" />
 
-        <com.ethan.morephone.presentation.dial.view.DialpadImageButton
+        <com.ethan.morephone.presentation.phone.dial.view.DialpadImageButton
             android:id="@+id/nine"
             style="@style/DialtactsDialpadButtonStyle"
             android:contentDescription="@string/description_image_button_nine"
@@ -100,19 +100,19 @@
         android:layout_height="0px"
         android:layout_weight="1">
 
-        <com.ethan.morephone.presentation.dial.view.DialpadImageButton
+        <com.ethan.morephone.presentation.phone.dial.view.DialpadImageButton
             android:id="@+id/star"
             style="@style/DialtactsDialpadButtonStyle"
             android:contentDescription="@string/description_image_button_star"
             android:src="@drawable/dial_num_star_wht" />
 
-        <com.ethan.morephone.presentation.dial.view.DialpadImageButton
+        <com.ethan.morephone.presentation.phone.dial.view.DialpadImageButton
             android:id="@+id/zero"
             style="@style/DialtactsDialpadButtonStyle"
             android:contentDescription="@string/description_image_button_zero"
             android:src="@drawable/dial_num_0_wht" />
 
-        <com.ethan.morephone.presentation.dial.view.DialpadImageButton
+        <com.ethan.morephone.presentation.phone.dial.view.DialpadImageButton
             android:id="@+id/pound"
             style="@style/DialtactsDialpadButtonStyle"
             android:contentDescription="@string/description_image_button_pound"
