--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -6,6 +6,11 @@
         <item>Voice</item>
     </string-array>
 
+    <string-array name="phone_titles_fragment">
+        <item>Dial</item>
+        <item>Call log</item>
+    </string-array>
+
     <string-array name="message_options">
         <item>Copy text</item>
         <item>Delete</item>
