--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -54,6 +54,11 @@
         <attr name="typeface" />
     </declare-styleable>
 
+    <declare-styleable name="ExpandableLayout">
+        <attr name="canExpand" format="boolean" />
+        <attr name="startExpanded" format="boolean" />
+    </declare-styleable>
+
 
     <attr name="typeface">
         <enum name="roboto_thin" value="0" />
