--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -50,4 +50,8 @@
     <dimen name="text_numbers_margin_left">48dp</dimen>
     <dimen name="item_number_space">8dp</dimen>
     <dimen name="image_avatar_default_width_height">96dp</dimen>
+
+    <!-- Fragment Voice -->
+
+    <dimen name="item_voice_space">8dp</dimen>
 </resources>
