--- a/app/src/main/res/layout/fragment_voice.xml
+++ b/app/src/main/res/layout/fragment_voice.xml
@@ -11,4 +11,14 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/tool_bar" />
 
+    <android.support.design.widget.FloatingActionButton xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/button_dial"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_margin="@dimen/activity_vertical_margin"
+        android:src="@drawable/ic_dialpad_white_24dp"
+        android:visibility="visible"
+        app:backgroundTint="@color/colorPrimary" />
 </RelativeLayout>
