--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,19 +5,40 @@
 
         <item
             android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
+            android:icon="@drawable/ic_add_black_24dp"
             android:title="Buy a phone" />
+
+        <item
+            android:id="@+id/nav_usage"
+            android:icon="@drawable/ic_data_usage_black_24dp"
+            android:title="Usage" />
+
+        <item
+            android:id="@+id/nav_review"
+            android:icon="@drawable/ic_rate_review_black_24dp"
+            android:title="Review" />
+
+        <item
+            android:id="@+id/nav_share"
+            android:icon="@drawable/ic_menu_share"
+            android:title="Share" />
     </group>
 
     <item android:title="Settings">
         <menu>
+
             <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
+                android:id="@+id/nav_setting"
+                android:icon="@drawable/ic_settings_black_24dp"
                 android:title="Setting" />
+
             <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
+                android:id="@+id/nav_license"
+                android:icon="@drawable/ic_android_black_24dp"
+                android:title="License" />
+            <item
+                android:id="@+id/nav_logout"
+                android:icon="@drawable/logout"
                 android:title="Logout" />
         </menu>
     </item>
