--- a/app/src/main/res/layout/item_number.xml
+++ b/app/src/main/res/layout/item_number.xml
@@ -1,54 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="?attr/actionBarSize"
+    android:layout_height="wrap_content"
     android:layout_marginLeft="@dimen/activity_vertical_margin"
     android:layout_marginRight="@dimen/activity_vertical_margin"
     android:background="@android:color/white"
     android:gravity="center_vertical">
 
-    <com.ethan.morephone.widget.MyTextView
-        android:id="@+id/text_number"
-        style="@style/TextNumberItem"
-        android:paddingLeft="@dimen/activity_vertical_margin"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@+id/image_message"
-        style="@style/ImageAction"
-        android:layout_alignParentRight="true"
-        android:paddingRight="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_vertical_margin"
-        android:visibility="gone"
-        android:src="@drawable/message" />
+        <com.ethan.morephone.widget.MyTextView
+            android:id="@+id/text_number"
+            style="@style/TextNumberItem"
+            android:paddingLeft="@dimen/activity_vertical_margin" />
 
-    <View
-        android:id="@+id/view"
-        style="@style/ViewDivider"
-        android:visibility="gone"
-        android:layout_toLeftOf="@+id/image_message" />
+        <ImageView
+            android:id="@+id/image_delete"
+            style="@style/ImageAction"
+            android:layout_alignParentRight="true"
+            android:paddingLeft="@dimen/activity_vertical_margin"
+            android:paddingRight="@dimen/activity_vertical_margin"
+            android:src="@drawable/ic_trash"
+            android:visibility="visible" />
 
-    <ImageView
-        android:id="@+id/image_call"
-        style="@style/ImageAction"
-        android:paddingRight="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_vertical_margin"
-        android:visibility="gone"
-        android:layout_toLeftOf="@+id/view"
-        android:src="@drawable/phone" />
+        <View
+            android:id="@+id/view_0"
+            style="@style/ViewDivider"
+            android:layout_toLeftOf="@+id/image_delete"
+            android:visibility="visible" />
 
-    <View
-        android:id="@+id/view_2"
-        style="@style/ViewDivider"
-        android:visibility="gone"
-        android:layout_toLeftOf="@+id/image_call" />
 
-    <ImageView
-        android:id="@+id/image_voice"
-        style="@style/ImageAction"
-        android:paddingRight="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_vertical_margin"
-        android:layout_toLeftOf="@+id/view_2"
-        android:visibility="gone"
-        android:src="@drawable/ic_voice" />
+        <ImageView
+            android:id="@+id/image_message"
+            style="@style/ImageAction"
+            android:layout_toLeftOf="@+id/view_0"
+            android:paddingLeft="@dimen/activity_vertical_margin"
+            android:paddingRight="@dimen/activity_vertical_margin"
+            android:src="@drawable/message"
+            android:visibility="visible" />
 
-</RelativeLayout>
+        <View
+            android:id="@+id/view"
+            style="@style/ViewDivider"
+            android:layout_toLeftOf="@+id/image_message"
+            android:visibility="gone" />
+
+        <ImageView
+            android:id="@+id/image_call"
+            style="@style/ImageAction"
+            android:layout_toLeftOf="@+id/view"
+            android:paddingLeft="@dimen/activity_vertical_margin"
+            android:paddingRight="@dimen/activity_vertical_margin"
+            android:src="@drawable/phone"
+            android:visibility="gone" />
+
+        <View
+            android:id="@+id/view_2"
+            style="@style/ViewDivider"
+            android:layout_toLeftOf="@+id/image_call"
+            android:visibility="visible" />
+
+        <ImageView
+            android:id="@+id/image_voice"
+            style="@style/ImageAction"
+            android:layout_toLeftOf="@+id/view_2"
+            android:paddingLeft="@dimen/activity_vertical_margin"
+            android:paddingRight="@dimen/activity_vertical_margin"
+            android:src="@drawable/ic_voice"
+            android:visibility="visible" />
+    </RelativeLayout>
+
+</android.support.v7.widget.CardView>
