change color screen authentication

--- a/app/src/main/res/layout/fragment_authentication.xml
+++ b/app/src/main/res/layout/fragment_authentication.xml
@@ -2,14 +2,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorBackgroundBlue"
+    android:background="@android:color/white"
     android:fitsSystemWindows="true">
 
     <android.support.v7.widget.Toolbar xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/tool_bar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="@color/colorBackgroundBlue"
+        android:background="@android:color/white"
         android:fitsSystemWindows="true"
         android:minHeight="?attr/actionBarSize"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
@@ -19,6 +19,7 @@
         android:id="@+id/text_authentication_title"
         style="@style/TextDisplay"
         android:layout_below="@+id/tool_bar"
+        android:textColor="@color/colorText"
         android:text="@string/authentication_text_welcome" />
 
     <android.support.v7.widget.AppCompatButton
