--- a/app/src/main/res/drawable/btn_background_blue_stroke_white.xml
+++ b/app/src/main/res/drawable/btn_background_blue_stroke_white.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/colorBackgroundBlue" />
+    <solid android:color="@color/colorPrimary" />
     <corners android:radius="@dimen/button_common_radius" />
     <stroke
         android:width="1dp"
