--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -2,10 +2,17 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorBackgroundBlue"
+    android:background="@android:color/white"
     android:orientation="vertical">
-    <include
-        layout="@layout/tool_bar_blue"/>
+    <android.support.v7.widget.Toolbar xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/tool_bar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@android:color/white"
+        android:fitsSystemWindows="true"
+        android:minHeight="?attr/actionBarSize"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        app:theme="@style/ToolBarStyle" />
 
     <com.ethan.morephone.widget.MyTextView
         android:id="@+id/text_register_name_title"
@@ -56,7 +63,7 @@
         style="@style/ViewCommon"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        app:backgroundTint="@color/colorMainDark"
+        app:backgroundTint="@color/colorGray"
         android:layout_margin="@dimen/activity_vertical_margin"
         android:src="@drawable/ic_arrow_right_green"/>
 
