--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -59,7 +59,7 @@
     </style>
 
     <style name="TextMoreOption" parent="ViewCommon">
-        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textColor">@color/colorText</item>
         <item name="android:textStyle">bold</item>
         <item name="android:layout_marginLeft">@dimen/activity_main_margin</item>
         <item name="android:layout_marginRight">@dimen/activity_main_margin</item>
@@ -104,7 +104,7 @@
     </style>
 
     <style name="ButtonWhite" parent="ButtonCommon">
-        <item name="android:textColor">@color/colorTextBlue</item>
+        <item name="android:textColor">@color/colorPrimary</item>
         <item name="android:background">@drawable/selector_button_white</item>
     </style>
 
@@ -118,13 +118,13 @@
         <item name="android:layout_marginLeft">@dimen/activity_main_margin</item>
         <item name="android:layout_marginRight">@dimen/activity_main_margin</item>
         <item name="android:textSize">14sp</item>
-        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textColor">@color/colorText</item>
     </style>
 
     <style name="TextAuthenticationTitle" parent="ViewCommon">
         <item name="android:layout_marginLeft">@dimen/activity_main_margin</item>
         <item name="android:layout_marginRight">@dimen/activity_main_margin</item>
-        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textColor">@color/colorText</item>
         <item name="android:textAppearance">@style/TextAppearance.AppCompat.Display1</item>
     </style>
 
@@ -138,7 +138,7 @@
     <style name="TextAuthenticationField" parent="ViewCommon">
         <item name="android:layout_marginLeft">@dimen/activity_main_margin</item>
         <item name="android:layout_marginRight">@dimen/activity_main_margin</item>
-        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textColor">@color/colorText</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textAppearance">@style/TextAppearance.AppCompat.Body1</item>
     </style>
@@ -146,7 +146,7 @@
     <style name="EditTextAuthentication" parent="ViewMatch">
         <item name="android:layout_marginLeft">@dimen/edit_text_margin</item>
         <item name="android:layout_marginRight">@dimen/edit_text_margin</item>
-        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textColor">@color/colorPrimary</item>
         <item name="android:singleLine">true</item>
         <item name="android:layout_marginTop">4dp</item>
         <item name="android:textSize">@dimen/abc_text_size_title_material</item>
