--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -259,4 +259,17 @@
         <item name="android:gravity">center_vertical</item>
     </style>
 
+    <style name="TextBuyANumberTitle" parent="ViewCommon">
+        <item name="android:layout_centerHorizontal">true</item>
+        <item name="android:textColor">@color/colorText</item>
+        <item name="android:textAppearance">@style/TextAppearance.AppCompat.Title</item>
+    </style>
+
+    <style name="SpinnerBuyANumberItem" parent="ViewMatch">
+        <item name="android:layout_marginLeft">@dimen/activity_main_margin</item>
+        <item name="android:layout_marginRight">@dimen/activity_main_margin</item>
+        <item name="android:textColor">@color/colorText</item>
+        <item name="android:textAppearance">@style/TextAppearance.AppCompat.Title</item>
+    </style>
+
 </resources>
