create screen result search, load country code

--- a/app/src/main/res/layout/item_country_name.xml
+++ b/app/src/main/res/layout/item_country_name.xml
@@ -2,4 +2,5 @@
 <com.ethan.morephone.widget.MyTextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/text_country_name"
     style="@style/TextNumberItem"
+    android:minHeight="48dp"
     android:gravity="center_vertical" />
