load api incoming phone numbers, api available phone numbers

--- a/app/src/main/res/layout/item_country_name.xml
+++ b/app/src/main/res/layout/item_country_name.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.ethan.morephone.widget.MyTextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/text_country_name"
-    style="@style/TextNumberItem"
+    style="@style/TextNumber"
     android:minHeight="48dp"
     android:gravity="center_vertical" />
