--- a/app/src/main/res/layout/fragment_search_phone_number.xml
+++ b/app/src/main/res/layout/fragment_search_phone_number.xml
@@ -10,7 +10,7 @@
         android:text="@string/buy_number_country" />
 
     <android.support.v7.widget.AppCompatSpinner
-        android:id="@+id/spinner_buy_number_country"
+        android:id="@+id/spinner_search_phone_number_country"
         style="@style/SpinnerBuyANumberItem"
         android:layout_below="@+id/text_buy_number_country"
         android:layout_marginTop="@dimen/activity_vertical_margin" />
@@ -18,49 +18,51 @@
     <com.ethan.morephone.widget.MyTextView
         android:id="@+id/text_buy_number_number"
         style="@style/TextBuyANumberTitle"
-        android:layout_below="@+id/spinner_buy_number_country"
+        android:layout_below="@+id/spinner_search_phone_number_country"
         android:layout_marginTop="@dimen/activity_main_margin"
         android:text="@string/buy_number_number" />
 
     <android.support.v7.widget.AppCompatEditText
-        android:id="@+id/edit_text_buy_number_number"
-        style="@style/TextBuyANumberTitle"
+        android:id="@+id/edit_text_search_phone_number_number"
+        style="@style/ViewMatch"
+        android:layout_marginLeft="@dimen/activity_main_margin"
+        android:layout_marginRight="@dimen/activity_main_margin"
         android:layout_below="@+id/text_buy_number_number"
         android:layout_marginTop="@dimen/activity_main_margin"
         android:inputType="number" />
 
     <com.ethan.morephone.widget.MyTextView
-        android:id="@+id/text_buy_number_multiple_select"
+        android:id="@+id/text_search_phone_number_multiple_select"
         style="@style/TextBuyANumberTitle"
-        android:layout_below="@+id/edit_text_buy_number_number"
+        android:layout_below="@+id/edit_text_search_phone_number_number"
         android:layout_marginTop="@dimen/activity_main_margin"
         android:text="@string/buy_number_multiple_select" />
 
-    <RadioButton
-        android:id="@+id/radio_button_sms"
+    <android.support.v7.widget.SwitchCompat
+        android:id="@+id/switch_search_phone_number_sms"
         style="@style/ViewCommon"
-        android:layout_below="@+id/text_buy_number_multiple_select"
+        android:layout_below="@+id/text_search_phone_number_multiple_select"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:text="SMS" />
+        android:text="@string/buy_number_sms" />
 
-    <RadioButton
-        android:id="@+id/radio_button_mms"
+    <android.support.v7.widget.SwitchCompat
+        android:id="@+id/switch_search_phone_number_mms"
         style="@style/ViewCommon"
-        android:layout_below="@+id/text_buy_number_multiple_select"
+        android:layout_below="@+id/text_search_phone_number_multiple_select"
         android:layout_marginLeft="@dimen/activity_vertical_margin"
         android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:layout_toRightOf="@+id/radio_button_sms"
-        android:text="MMS" />
+        android:layout_toRightOf="@+id/switch_search_phone_number_sms"
+        android:text="@string/buy_number_mms" />
 
-    <RadioButton
-        android:id="@+id/radio_button_voice"
+    <android.support.v7.widget.SwitchCompat
+        android:id="@+id/switch_search_phone_number_voice"
         style="@style/ViewCommon"
-        android:layout_below="@+id/text_buy_number_multiple_select"
+        android:layout_below="@+id/text_search_phone_number_multiple_select"
         android:layout_marginRight="@dimen/activity_vertical_margin"
         android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:layout_toLeftOf="@+id/radio_button_sms"
-        android:text="VOICE" />
+        android:layout_toLeftOf="@+id/switch_search_phone_number_sms"
+        android:text="@string/buy_number_voice" />
 
     <android.support.v7.widget.AppCompatButton
         android:id="@+id/button_buy_number_search"
