--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -97,4 +97,15 @@
         <enum name="lato_black_italic" value="33" />
     </attr>
 
+    <declare-styleable name="DotProgressBar">
+        <attr name="startColor" format="color"/>
+        <attr name="endColor" format="color"/>
+        <attr name="duration" format="integer"/>
+        <attr name="amount" format="integer"/>
+        <attr name="animationDirection" format="enum">
+            <enum name="right" value="1"/>
+            <enum name="left" value="-1"/>
+        </attr>
+    </declare-styleable>
+
 </resources>
