--- a/app/src/main/res/layout/fragment_message_compose.xml
+++ b/app/src/main/res/layout/fragment_message_compose.xml
@@ -20,6 +20,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@null"
+                android:inputType="phone"
                 android:hint="@string/message_compose_hint_contacts" />
 
         </RelativeLayout>
