load all call voice

--- a/app/src/main/res/layout/fragment_voice.xml
+++ b/app/src/main/res/layout/fragment_voice.xml
@@ -5,11 +5,19 @@
 
     <include layout="@layout/tool_bar" />
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_view"
+    <com.ethan.morephone.widget.MultiSwipeRefreshLayout
+        android:id="@+id/swipe_refresh_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/tool_bar" />
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tool_bar">
+
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </com.ethan.morephone.widget.MultiSwipeRefreshLayout>
 
     <android.support.design.widget.FloatingActionButton xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/button_dial"
