--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -56,4 +56,17 @@
     <dimen name="item_voice_space">8dp</dimen>
 
     <dimen name="result_search_number_item_height">48dp</dimen>
+    
+    <!-- Fragment Incoming Screen -->
+    <dimen name="margin_top_incoming_text">4dp</dimen>
+    <dimen name="margin_incoming_text_title">48dp</dimen>
+    <dimen name="margin_incoming_relative">72dp</dimen>
+
+    <!-- Fragment In Call Screen -->
+    <dimen name="margin_in_call_floating_button">72dp</dimen>
+    <dimen name="margin_top_in_call_image">16dp</dimen>
+    <dimen name="margin_in_call_image">36dp</dimen>
+    <dimen name="margin_in_call_text">4dp</dimen>
+    <dimen name="margin_in_call_text_time">24dp</dimen>
+
 </resources>
